--- a/first_new_Store/manifest.json
+++ b/first_new_Store/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "5f9d0bc30b8a33fc5890d0cf128fab5e36524e030c69",
-    "generated_date": "2025-12-31T14:03:51.278903+00:00",
+    "generated_date": "2025-12-31T14:04:58.395915+00:00",
     "files": {
         "manifest.json": {
-            "size": 713,
-            "checksum": "sha1:9b1eb0f6786c25d4cbe09089bce7748da85acf2a"
+            "size": 865,
+            "checksum": "sha1:e43dbad3861e2389b3c3e9fcb2c78635e4b228c7"
         },
         "metadata.json": {
             "size": 347,
@@ -21,6 +21,10 @@
         "schema.cedarschema": {
             "size": 2549,
             "checksum": "sha1:ee9b679c32a19ed2b9a738e1184efe314628828a"
+        },
+        "trusted-issuers/jans_first.json": {
+            "size": 1586,
+            "checksum": "sha1:b167dde89c45a5576226656449243be47af2ffc4"
         }
     }
 }
