--- a/second_store/manifest.json
+++ b/second_store/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "246ab002d17d0e4330c47a45729544465d59ca6633fc",
-    "generated_date": "2026-01-01T08:27:55.401517+00:00",
+    "generated_date": "2026-01-01T08:28:33.735154+00:00",
     "files": {
         "manifest.json": {
-            "size": 428,
-            "checksum": "sha1:02f28369fea37bb7859c570fdeb76e426530cf92"
+            "size": 707,
+            "checksum": "sha1:2ba6bd2d026c6bf85515f65e60f0ecb798eed0ca"
         },
         "metadata.json": {
             "size": 341,
@@ -17,6 +17,10 @@
         "schema.cedarschema": {
             "size": 4249,
             "checksum": "sha1:de9b13535251cf9504555bde8a4c881f0c63ce52"
+        },
+        "trusted-issuers/jans.json": {
+            "size": 1567,
+            "checksum": "sha1:904e7440d421e4086930b56299b68704f8571dcb"
         }
     }
 }
