--- a/second_store/manifest.json
+++ b/second_store/manifest.json
@@ -1,10 +1,14 @@
 {
     "policy_store_id": "246ab002d17d0e4330c47a45729544465d59ca6633fc",
-    "generated_date": "2026-01-01T08:28:33.735154+00:00",
+    "generated_date": "2026-01-01T09:05:51.160861+00:00",
     "files": {
+        "entities/admin_entity.json": {
+            "size": 540,
+            "checksum": "sha1:795fb3795bbcf79e7afc942ac6b1f17c0a35675c"
+        },
         "manifest.json": {
-            "size": 707,
-            "checksum": "sha1:2ba6bd2d026c6bf85515f65e60f0ecb798eed0ca"
+            "size": 855,
+            "checksum": "sha1:b1b022c4923c3e88ecca74f459b511259b755a18"
         },
         "metadata.json": {
             "size": 341,
