--- a/second_store/manifest.json
+++ b/second_store/manifest.json
@@ -1,14 +1,18 @@
 {
     "policy_store_id": "bd22436b039889fd1e3e6269a9b797b84be92b855ae2",
-    "generated_date": "2026-01-15T12:30:57.762755+00:00",
+    "generated_date": "2026-01-15T12:37:31.330774+00:00",
     "files": {
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:14ddfa828fe71d18598b5191b4e15b174ed485fe"
+        },
         "metadata.json": {
             "size": 334,
-            "checksum": "sha1:6e2a416c8e3edf8a498f871ac5958219345bba8d"
+            "checksum": "sha1:f9b485bf9b6f9c985d6c730a5c2754da600c070a"
         },
         "schema.cedarschema": {
-            "size": 4249,
-            "checksum": "sha1:de9b13535251cf9504555bde8a4c881f0c63ce52"
+            "size": 5413,
+            "checksum": "sha1:618f3a888628d7421fcd04000d7c7cef285c6dd1"
         }
     }
 }
