--- a/admin_store/manifest.json
+++ b/admin_store/manifest.json
@@ -1,14 +1,18 @@
 {
     "policy_store_id": "0731f2832023d5e5d472e8b650cf15e4a7624faf5e2c",
-    "generated_date": "2026-01-15T17:48:48.102330+00:00",
+    "generated_date": "2026-01-15T17:49:38.481943+00:00",
     "files": {
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:b994fb99f38788e241b55f3f6145aad166e510ec"
+        },
         "metadata.json": {
             "size": 339,
-            "checksum": "sha1:d0d2d4cacc3b8c1f4d6323a85313f0a30843a38f"
+            "checksum": "sha1:210aa8fca7d68eb0c3595ab729c490f60cc255f9"
         },
         "schema.cedarschema": {
-            "size": 4249,
-            "checksum": "sha1:de9b13535251cf9504555bde8a4c881f0c63ce52"
+            "size": 3438,
+            "checksum": "sha1:4483ad844b06652774b7caef916bae08af76f0f5"
         }
     }
 }
