--- a/second_store/manifest.json
+++ b/second_store/manifest.json
@@ -1,14 +1,18 @@
 {
     "policy_store_id": "3a02b0770648626e02a3092e0b0597f5d5d9e7682e45",
-    "generated_date": "2026-01-16T08:44:36.198878+00:00",
+    "generated_date": "2026-01-16T08:45:22.199283+00:00",
     "files": {
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:83b2eaf7965359270c46938df525752577465448"
+        },
         "metadata.json": {
             "size": 329,
-            "checksum": "sha1:96d200897aece836abeb81d4e1a29bfc083fcd7e"
+            "checksum": "sha1:a7e4d82db9f3be3700a24dac3c933870c84908f6"
         },
         "schema.cedarschema": {
-            "size": 4249,
-            "checksum": "sha1:de9b13535251cf9504555bde8a4c881f0c63ce52"
+            "size": 3438,
+            "checksum": "sha1:4483ad844b06652774b7caef916bae08af76f0f5"
         }
     }
 }
