--- a/second_store/manifest.json
+++ b/second_store/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "3a02b0770648626e02a3092e0b0597f5d5d9e7682e45",
-    "generated_date": "2026-01-16T09:01:17.880458+00:00",
+    "generated_date": "2026-01-16T09:01:24.633958+00:00",
     "files": {
         "manifest.json": {
             "size": 715,
-            "checksum": "sha1:1f9ee1172f164f7be9be7a2a7a37e53756fa4499"
+            "checksum": "sha1:b469c40545dddd32a81cf371e3dd26d53e3a8ff7"
         },
         "metadata.json": {
             "size": 329,
@@ -17,6 +17,10 @@
         "trusted-issuers/admin_ui.json": {
             "size": 1584,
             "checksum": "sha1:d5a3c57273825e539100aef68a70852886f93281"
+        },
+        "trusted-issuers/test.json": {
+            "size": 1568,
+            "checksum": "sha1:29c9b8ce87e3959972a663d9962c2f1c2a2c5681"
         }
     }
 }
