--- a/third/manifest.json
+++ b/third/manifest.json
@@ -1,14 +1,18 @@
 {
     "policy_store_id": "53894f917ae16f4a6f023f2e46666c9480f19ad2ddfb",
-    "generated_date": "2026-01-16T10:40:50.229879+00:00",
+    "generated_date": "2026-01-16T10:41:32.999934+00:00",
     "files": {
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:27930bec96bae5de7a0d6cc108e58915d75b82d6"
+        },
         "metadata.json": {
             "size": 322,
-            "checksum": "sha1:47ad87064db9c5135e7dfcc1a36cf2a1b09c6809"
+            "checksum": "sha1:5b3288d7a43612a3eceac4bba883bbd92866a9a9"
         },
         "schema.cedarschema": {
-            "size": 4249,
-            "checksum": "sha1:de9b13535251cf9504555bde8a4c881f0c63ce52"
+            "size": 5880,
+            "checksum": "sha1:ba76470ec89d191acbced492b91c78bc3861356b"
         }
     }
 }
