--- a/flex_ui/manifest.json
+++ b/flex_ui/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "d9993a9574c3590141778a07581b693d8fa4579f641a",
-    "generated_date": "2026-01-16T14:01:34.667343+00:00",
+    "generated_date": "2026-01-16T14:01:50.876450+00:00",
     "files": {
         "manifest.json": {
             "size": 563,
-            "checksum": "sha1:a0213ddad8a77d3e88a57b7ce619958440563a95"
+            "checksum": "sha1:0f2aa2d2123c5a86ecfb0a75de777f793d512456"
         },
         "metadata.json": {
             "size": 324,
@@ -13,6 +13,10 @@
         "schema.cedarschema": {
             "size": 3409,
             "checksum": "sha1:c5423e4768b327b7932955b857b9d6f185c75c70"
+        },
+        "trusted-issuers/Jans.json": {
+            "size": 1567,
+            "checksum": "sha1:33b5bcc9d67d18fb135793a20e83dbd6c9e7e4a6"
         }
     }
 }
