--- a/flex_ui/manifest.json
+++ b/flex_ui/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "d9993a9574c3590141778a07581b693d8fa4579f641a",
-    "generated_date": "2026-01-16T14:46:04.096625+00:00",
+    "generated_date": "2026-01-16T14:47:16.962927+00:00",
     "files": {
         "manifest.json": {
-            "size": 711,
-            "checksum": "sha1:ad45705c954c9309ea9394929e36b85677997474"
+            "size": 563,
+            "checksum": "sha1:c31bd6270e8a2007226feaae27ec18a75fa33ed7"
         },
         "metadata.json": {
             "size": 324,
@@ -13,6 +13,10 @@
         "schema.cedarschema": {
             "size": 3409,
             "checksum": "sha1:c5423e4768b327b7932955b857b9d6f185c75c70"
+        },
+        "trusted-issuers/Jans.json": {
+            "size": 1567,
+            "checksum": "sha1:a0010a074e25614e044ed8c7e208a90eccde8dac"
         }
     }
 }
