feat: update manifest.json

--- a/flex_ui/manifest.json
+++ b/flex_ui/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "d9993a9574c3590141778a07581b693d8fa4579f641a",
-    "generated_date": "2026-01-16T14:48:08.264483+00:00",
+    "generated_date": "2026-01-16T14:48:31.844697+00:00",
     "files": {
         "manifest.json": {
             "size": 711,
-            "checksum": "sha1:bb95ae22469d7fd2805fb4f51e17bc6171b01c32"
+            "checksum": "sha1:2f99da02323bc6992fa78f9a17f883b2361f7938"
         },
         "metadata.json": {
             "size": 324,
@@ -17,6 +17,10 @@
         "trusted-issuers/Jans.json": {
             "size": 1567,
             "checksum": "sha1:a0010a074e25614e044ed8c7e208a90eccde8dac"
+        },
+        "trusted-issuers/admin_ui.json": {
+            "size": 1584,
+            "checksum": "sha1:390f7a9256393f1c58895e061fe4afbef175594f"
         }
     }
 }
