--- a/flex_ui/manifest.json
+++ b/flex_ui/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "d9993a9574c3590141778a07581b693d8fa4579f641a",
-    "generated_date": "2026-01-16T17:42:18.289019+00:00",
+    "generated_date": "2026-01-16T17:42:23.696903+00:00",
     "files": {
         "manifest.json": {
             "size": 563,
-            "checksum": "sha1:3c8f3d7e1dae4df16326f7ee398d12eaff4c466d"
+            "checksum": "sha1:8dc39c8a0fa77fccc4f59c31ef50f6c704b1b15b"
         },
         "metadata.json": {
             "size": 324,
@@ -13,6 +13,10 @@
         "schema.cedarschema": {
             "size": 5882,
             "checksum": "sha1:dcbde8d57ac00c06fff304c791d262a86846d6c9"
+        },
+        "trusted-issuers/jans.json": {
+            "size": 1567,
+            "checksum": "sha1:8eb27d4b1509fbe0e32ecb563c63407ba57ea902"
         }
     }
 }
