--- a/flex_ui/manifest.json
+++ b/flex_ui/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "d9993a9574c3590141778a07581b693d8fa4579f641a",
-    "generated_date": "2026-01-16T18:01:36.203817+00:00",
+    "generated_date": "2026-01-16T18:01:41.723354+00:00",
     "files": {
         "manifest.json": {
             "size": 563,
-            "checksum": "sha1:f1effc3ec6d71f4ba7d467519d1b08e0aa1e1d1d"
+            "checksum": "sha1:beb9078247f10ebf344e9011bec8e46448307b77"
         },
         "metadata.json": {
             "size": 324,
@@ -13,6 +13,10 @@
         "schema.cedarschema": {
             "size": 5926,
             "checksum": "sha1:b42c3ea4d1e9c2212275596c29dc58e8b5c39104"
+        },
+        "trusted-issuers/admin_ui.json": {
+            "size": 1576,
+            "checksum": "sha1:3830d7658df480fa28e7a2a294655ebecfef0624"
         }
     }
 }
