--- a/flex_ui/manifest.json
+++ b/flex_ui/manifest.json
@@ -1,10 +1,14 @@
 {
     "policy_store_id": "d9993a9574c3590141778a07581b693d8fa4579f641a",
-    "generated_date": "2026-01-16T18:01:41.723354+00:00",
+    "generated_date": "2026-01-18T17:15:21.283628+00:00",
     "files": {
+        "entities/test_one_entity.json": {
+            "size": 264,
+            "checksum": "sha1:540d919d6c510c846889cbf6dcd9f91260ee3358"
+        },
         "manifest.json": {
-            "size": 563,
-            "checksum": "sha1:beb9078247f10ebf344e9011bec8e46448307b77"
+            "size": 715,
+            "checksum": "sha1:a8a1d272dbcf28822dc25a46ab5ed9651ec8bd0f"
         },
         "metadata.json": {
             "size": 324,
