--- a/admin_ui/manifest.json
+++ b/admin_ui/manifest.json
@@ -1,10 +1,18 @@
 {
     "policy_store_id": "4da73a5951d6d104a5f2d339133e15bb62e7abd8fb7a",
-    "generated_date": "2026-01-19T12:06:39.416521+00:00",
+    "generated_date": "2026-01-19T12:07:06.721404+00:00",
     "files": {
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:fb64d8a0b876a4d227d1b9a284cf9fda4af434f8"
+        },
         "metadata.json": {
             "size": 339,
             "checksum": "sha1:4df7b834d174d431edb8139a7f8195ab9349197a"
+        },
+        "policies/admin001.cedar": {
+            "size": 61,
+            "checksum": "sha1:b381230480c1167480efd512cccc78f1e1b8937c"
         },
         "schema.cedarschema": {
             "size": 4249,
