--- a/admin_ui/manifest.json
+++ b/admin_ui/manifest.json
@@ -1,10 +1,10 @@
 {
     "policy_store_id": "4da73a5951d6d104a5f2d339133e15bb62e7abd8fb7a",
-    "generated_date": "2026-01-19T12:08:06.024120+00:00",
+    "generated_date": "2026-01-19T12:08:12.661022+00:00",
     "files": {
         "manifest.json": {
             "size": 707,
-            "checksum": "sha1:e879c13396dc84b4e71cfaf65197619806ac6262"
+            "checksum": "sha1:5d13bb8f3a418ab7fb1a984f08f843c8645a7ad4"
         },
         "metadata.json": {
             "size": 339,
@@ -17,6 +17,10 @@
         "schema.cedarschema": {
             "size": 5926,
             "checksum": "sha1:b42c3ea4d1e9c2212275596c29dc58e8b5c39104"
+        },
+        "trusted-issuers/admin_ui.json": {
+            "size": 1597,
+            "checksum": "sha1:a036eeaf070f4a5c80082941175f5d71a8f79761"
         }
     }
 }
