--- a/flex/manifest.json
+++ b/flex/manifest.json
@@ -1,7 +1,15 @@
 {
     "policy_store_id": "64ab6fd12a59ba88e5bd72236f43d992238d5592d6f5",
-    "generated_date": "2026-01-19T13:02:58.886644+00:00",
+    "generated_date": "2026-01-19T14:18:34.801106+00:00",
     "files": {
+        "entities/test.json": {
+            "size": 264,
+            "checksum": "sha1:137243c7c08f5106f55ab023abc01f0a21cba538"
+        },
+        "manifest.json": {
+            "size": 428,
+            "checksum": "sha1:e31cb7f725545b4d3d9827b1c2e6e470cb453584"
+        },
         "metadata.json": {
             "size": 325,
             "checksum": "sha1:ce0bc77a18ad729c923709a9019a22644ad4f3e0"
